Notification path and swagger updated
