# routes/api.js
@@ -8,6 +8,7 @@ var children = require('./api/child.route')
 var controls = require('./api/control.route')
 var vaccines = require('./api/vaccine.route')
 var info = require('./api/info.route')
+var notification = require('./api/notification.route')
 //var percentils = require('./api/percentil.route')
 //var calendar = require('./api/calendar.route')
 
@@ -17,6 +18,7 @@ router.use('/children', children);
 router.use('/controls', controls);
 router.use('/info', info);
 router.use('/vaccines', vaccines);
+router.use('/notifications', notification);
 //router.use('/percentils', percentils);
 //router.use('/calendar', calendar);
 
